fixed broken ui interface

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -25,20 +25,20 @@
 }
 
 @font-face {
-  font-family: 'Anakotmai';
-  src: url('assets/fonts/anakotmai-medium.woff') format('truetype');
-  font-weight: medium;
+  font-family: 'Anakotmai-set';
+  src: url('assets/fonts/anakotmai-medium.woff') format('woff');
+  font-weight: normal;
 }
 
 @font-face {
-  font-family: 'Anakotmai';
-  src: url('assets/fonts/anakotmai-bold.woff') format('truetype');
+  font-family: 'Anakotmai-set';
+  src: url('assets/fonts/anakotmai-bold.woff') format('woff');
   font-weight: bold;
 }
 
 @font-face {
-  font-family: 'Anakotmai';
-  src: url('assets/fonts/anakotmai-light.woff') format('truetype');
+  font-family: 'Anakotmai-set';
+  src: url('assets/fonts/anakotmai-light.woff') format('woff');
   font-weight: lighter;
 }
 
@@ -46,7 +46,7 @@
   font-weight: bold;
 } 
 .text-normal {
-  font-weight: medium;
+  font-weight: normal;
 } 
 .text-thin {
   font-weight: lighter;
@@ -66,4 +66,19 @@
   &light {
     font-weight: 100;
   }
+}
+.align-left {
+  text-align: left;
+}
+
+.align-center {
+  text-align: center;
+}
+
+.align-right {
+  text-align: right;
+}
+
+.mt-3{
+  margin-top: 3rem;
 }
